--- a/index.ipynb
+++ b/index.ipynb
@@ -72,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = 'january'"
+    "travel_month = 'January'"
    ]
   },
   {
@@ -99,13 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3"
    ]
   },
   {
